# mat-model-lab

./: .gitignore  CONTRIBUTING.md  CRYSTAL_TYPES.md  LICENSE  METHODS.md  README.md  __init__.py  build_exe.py  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
assets/database/: materials.json
core/: __init__.py  bulk.py  conversions.py  crystal_type.py  elastic_vrh.py  elastic_vrh_2d.py  hardness.py  poisson.py  shear.py  stability.py  young.py
examples/: 2D_Hexagonal_Graphene.txt  2D_Hexagonal_Graphene.xlsx  2D_Oblique_ReS2.txt  2D_Oblique_ReS2.xlsx  2D_Rectangular_BP.txt  2D_Rectangular_BP.xlsx  2D_Square_Example.txt  2D_Square_Example.xlsx  3D_Cubic_Example.txt  3D_Cubic_Example.xlsx  3D_Example_MultiSheet.xlsx  3D_Example_SingleSheet.xlsx  3D_Hexagonal_Example.txt  3D_Hexagonal_Example.xlsx  3D_Monoclinic_1_Example.txt  3D_Monoclinic_1_Example.xlsx  3D_Monoclinic_2_Example.txt  3D_Monoclinic_2_Example.xlsx  3D_Orthorhombic_Example.txt  3D_Orthorhombic_Example.xlsx  3D_Tetragonal_1_Example.txt  3D_Tetragonal_1_Example.xlsx  3D_Tetragonal_2_Example.txt  3D_Tetragonal_2_Example.xlsx  3D_Triclinic_Example.txt  3D_Triclinic_Example.xlsx  3D_Trigonal_1_Example.txt  3D_Trigonal_1_Example.xlsx  3D_Trigonal_2_Example.txt  3D_Trigonal_2_Example.xlsx
gui/: __init__.py  main_window.py
mml_utils/: __init__.py  code_export.py  conversions.py  convert_icon.py  data_io.py  generate_examples.py  material_db.py  paths.py  report_generator.py
visualization/: __init__.py  plot_2d.py  plot_3d.py  plot_slice.py  plot_utils.py
(+14 files in other folders)
