[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mat-model-lab"
version = "1.0.0"
description = "A comprehensive material constitutive model analysis and visualization tool"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "seekzzh"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "PyQt6>=6.0",
    "pandas>=1.4",
    "openpyxl>=3.0",
    "python-docx>=1.0"
]

[project.urls]
Homepage = "https://github.com/seekzzh/mat-model-lab"
Repository = "https://github.com/seekzzh/mat-model-lab"
Issues = "https://github.com/seekzzh/mat-model-lab/issues"

[project.scripts]
mat-model-lab = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "gui", "mml_utils", "visualization", "assets"]
